apps/cluster-network-addons/base/cnao-allow-egress-to-cluster-api-https.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnao-allow-egress-to-cluster-api-https
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: allow-access-cluster-services
      operator: Exists
  policyTypes:
  - Egress
