apps/cluster-network-addons/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-api-server-egress
spec:
  egress:
  - toEntities:
    - kube-apiserver
  - toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  endpointSelector:
    matchExpressions:
    - key: allow-access-cluster-services
      operator: Exists
